Content updates. Fix alignment issues in project section.

--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -31,10 +31,15 @@
   }
 }
 
-.contents {
+.contents-left {
   @media only screen and (min-width: $cut) {
     margin-left: 0;
     width: 48%;
+
+    h3 {
+      margin-top: 0px;
+      padding-top: 0px;
+    }
   }
 }
 
